--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "emailjs-com": "^3.2.0",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
